Handle saving multiple custom shortcuts

Use QList<QKeySequence> instead of QKeySequence in KisActionRegistry.

This also fixes an error in KisShortcutEditWidget.

Maniphest Tasks: T1244
BUG: 362134